Update ModulInventar.md, ag10001.yaml, build.xml, and 14 more files

--- a/ag10001.yaml
+++ b/ag10001.yaml
@@ -1,6 +1,6 @@
 ---
 id: "ag10001"
-sachverhalt: "Die Inventur zum 31.12.$(Vorjahr) lieferte folgende Ergebnisse$(ifpdf ' (s. nächste Seite)')."
+sachverhalt: "Die Inventur zum 31.12. lieferte folgende Ergebnisse:"
 aufgaben: |
   1. Bringen sie die Wirtschaftsgüter in die richtige Reihenfolge und setzen sie auch die Überschriften und Summen an die richtige Stelle.
   1. Berechnen sie alle Summen und das Reinvermögen und tragen sie die Werte in die richtigen Felder ein.
