--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,12 @@
 	<!-- <property name="ftp.server" value="www342.your-server.de" />
 	<property name="ftp.dir" value="public_html/pecunia-non-olet/Magazin"/> -->
 		<copy todir="0_TMP" >
+			<fileset dir="layouts/">
+				<include name="*.css" />
+			</fileset>
+			<fileset dir="scripts/">
+				<include name="*.js" />
+			</fileset>
 			<fileset dir=".">
 				<include name="*.lua" />
 				<include name="*.yaml" />
@@ -25,7 +31,7 @@
 	    <arg line="-l html5.lua ${ant.project.name}.md" />
 	</exec>
 	<exec executable="pandoc" dir="0_TMP/">
-	    <arg line="${ant.project.name}.md -t html --template=jho -s -o ${ant.project.name}.html" />
+	    <arg line="${ant.project.name}.md -t html --template=jho -c wiedereinstieg.css -H sort.js -s -o ${ant.project.name}.html" />
 	</exec>
 	<property name="done" value="done" />
     </target>
